# deep-research-agent

./: .env.example  .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  planner.py  query_enhancer.py  reddit_processor.py  scraper_agent.py  summarizer.py
tools/: __init__.py  exa_search.py  reddit_scraper.py  serper_search.py  youtube_transcript.py
utils/: __init__.py  llm.py  prompts.py
